fixed bug with endless loading and other improvements

--- a/index.html
+++ b/index.html
@@ -187,12 +187,14 @@
           <select id="sortSelect">
             <option value="date_desc">Date ↓ (newest)</option>
             <option value="date_asc">Date ↑ (oldest)</option>
+            <option value="type_cheater">Type: Cheater first</option>
+            <option value="type_huesos">Type: Huesos first</option>
           </select>
         </div>
 
         <div class="view-toggle">
-          <button class="btn btn-ghost btn-small" id="listViewBtn">List</button>
-          <button class="btn btn-ghost btn-small" id="tableViewBtn">Table</button>
+          <button type="button" class="btn btn-ghost btn-small" id="listViewBtn">List</button>
+          <button type="button" class="btn btn-ghost btn-small" id="tableViewBtn">Table</button>
         </div>
       </div>
 
